--- a/pages/sections.html
+++ b/pages/sections.html
@@ -79,7 +79,7 @@
 
                                 <div id="javascript" class="section-block">
                                     <div class="code-block">
-                                        <h6>JavaScript Code Example</h6>
+                                        <h6>Floyd-Warshall Algorithm</h6>
                                         <pre><code class="language-javascript">
 function myFunction(a, b) {
   return a * b;
