--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                                     <br>
                                     Finally, we present an attempt at an implementation of the parameterization method for the
                                     MRC, inspired on <a href="assets/files/megiddo_earlier.pdf" target="_blank">Megiddo's earlier work</a>
-                                    <a class="scrollto" href="#ref-3">[3]</a> and conclude with some remarks and outlooks. 
+                                    <a class="scrollto" href="#ref-3">[3]</a> and conclude with some remarks and outlooks.
 <!--
                                     and using
                                     <a href="https://developer.mozilla.org/en-US/docs/Web/API/Web_Workers_API" target="_blank">Mozilla’s Web Worker API</a> for
@@ -829,7 +829,7 @@
                                 <div class="section-block">
                                   <p class="text-justify">
                                     In this work we have studied two in-depth examples of parametric search. The first being a more artificial example,
-                                    and the second a formulation minimization problem. While both problems seem different at first glance,
+                                    and the second a formulation of a minimization problem. While both problems seem different at first glance,
                                     the parametric search formulation of both problems shows to be surprisingly similar. The general nature and applicability of
                                     parametric search contribute to its success as an optimization technique for
                                     a wide range of problems <a class="scrollto" href="#ref-1">[1]</a> in combinatorial optimization and computational geometry.
