Tiny content error fix.

--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@
                                             only using nodes from the set \( \{1 \dots m-1 \} \cup \{i, j\} \) and using a
                                             distance function \( c_{ij}(t) = a_{ij} - tb_{ij} \), the parameterization
                                             that is core element for algorithm \( B \). In our implementation, this is represented as a
-                                            function \( f(i, j, t, m) \) that is returned from a call to the function \(parameterize(A, C, T)\), where
+                                            function \( f(t) \) that is returned from a call to the function \(parameterize(A, C, T)\), where
                                             \(A\) is an adjacency matrix, \(C\) is a cost matrix and \(T\) a time matrix for the given problem.
                                             <br><br>
                                             With the \(t\)-parameterized function, the first step is to find a \( t' \in [e,f] \) such that
